<resources>
    <string name="app_name">Quiz Game</string>
    <string name="please_choose_an_option">No account?</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="birth_date">Birth Date:</string>
    <string name="password">Password:</string>
    <string name="bob">Bob</string>
    <string name="anderson">Anderson</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="passwords">Password</string>
    <string name="_17_01_1998">17/01/1998</string>
    <string name="registers">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">No account?</string>
    <string name="register2">Register</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome</string>
    <string name="next_question">Next Question</string>
    <string name="select_the_primary_colors">Select the primary colors</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="confirm">Confirm</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="what_is_37_42">What is 37 + 42?</string>
    <string name="_89">89</string>
    <string name="_79">79</string>
    <string name="_75">75</string>
    <string name="_92">92</string>
    <string name="when_was_the_programming_language_java_first_released">When was the programming language Java first released?</string>
    <string name="_1997">1997</string>
    <string name="_2005">2005</string>
    <string name="_2001">2001</string>
    <string name="_1995">1995</string>
    <string name="which_are_programming_languages">Which are programming languages?</string>
    <string name="assembly">Assembly</string>
    <string name="paper">Paper</string>
    <string name="minute">Minute</string>
    <string name="java">Java</string>
    <string name="what_type_of_programming_language_is_python">What type of programming language is Python?</string>
    <string name="finish_quiz">Finish Quiz</string>
    <string name="high_level">High-level</string>
    <string name="medium_level">Medium-level</string>
    <string name="low_level">Low-level</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="_5">5</string>
    <string name="you_finished_the_quiz">You finished the quiz!</string>
    <string name="result">Result:</string>
    <string name="return_to_start">Return to start</string>
    <string name="start_quiz">Start quiz</string>
    <string name="start_now">Start now</string>
    <string name="view_instructions">View Instructions</string>
    <string name="view_past_quiz_scores">View Past Quiz Scores</string>

</resources>